// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateFrequencySelect renders correctly 1`] = `
<UpdateFrequencySelect>
  <div
    className="version-item"
  >
    <div
      className="mb-2"
    >
      <span
        className="info-medium-gray"
      >
        Update: 
      </span>
      <span
        className="info-medium-blue"
        onClick={[Function]}
      >
        Manual
      </span>
    </div>
    <div
      className="info-medium-light-gray"
    >
      Last checked: 
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      fade={true}
      isOpen={false}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</UpdateFrequencySelect>
`;

exports[`UpdateFrequencySelect renders correctly 2`] = `
<UpdateFrequencySelect>
  <div
    className="version-item"
  >
    <div
      className="mb-2"
    >
      <span
        className="info-medium-gray"
      >
        Update: 
      </span>
      <span
        className="info-medium-blue"
        onClick={[Function]}
      >
        Manual
      </span>
    </div>
    <div
      className="info-medium-light-gray"
    >
      Last checked: 
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      fade={true}
      isOpen={true}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</UpdateFrequencySelect>
`;
